--- a/roles/ipaserver/tasks/main.yml
+++ b/roles/ipaserver/tasks/main.yml
@@ -5,6 +5,7 @@
   yum: name={{ item }} state=present
   with_items:
     - bind-dyndb-ldap
+    - ipa-server-dns
     - ipa-server
     - firewalld
 
@@ -16,7 +17,7 @@
     - bind-pkcs11
     - bind-pkcs11-utils
     - ipa-server-dns
-  when: ansible_distribution == "RedHat"
+  when: ansible_distribution == "RedHat" or ansible_distribution == "CentOS"
 
 - name: Get default DNS
   resolver:
