--- a/roles/keycloak/handlers/main.yml
+++ b/roles/keycloak/handlers/main.yml
@@ -2,3 +2,6 @@
 - name: reload systemd
   sudo: yes
   command: systemctl daemon-reload
+
+- name: restart keycloak
+  service: name=keycloak enabled=yes state=restarted
