Migrating to OSP
ansible-playbook /home/ayoung/devel/rippowam/downstream.yml

will install osp8 and RH SSO.

Need to run it twice due to an error unzipping the jar file for SSO

--- a/roles/packstack/tasks/packstack.yml
+++ b/roles/packstack/tasks/packstack.yml
@@ -13,3 +13,11 @@
 - name: Run packstack
   command: "packstack --answer-file /answers.txt"
   when: answers.changed
+  ignore_errors: yes
+
+
+- name: remove ssl from ports
+  lineinfile: dest=/etc/httpd/conf/ports.conf 
+              state=absent
+              line="Listen 443"
+
