--- a/roles/packstack/tasks/main.yml
+++ b/roles/packstack/tasks/main.yml
@@ -1,8 +1,14 @@
 ---
-- name: Install packstack repos
+- name: Install rhos-release
   register: packstackrepo
-  copy: src=RH7-RHOS-7.0.repo
-        dest=/etc/yum.repos.d/RH7-RHOS-7.0.repo
+  command: rpm -ivh http://rhos-release.virt.bos.redhat.com/repos/rhos-release/rhos-release-latest.noarch.rpm
+  ignore_errors: yes
+
+- name: Install repos
+  register: packstackrepo
+  command: rhos-release 8
+  ignore_errors: yes
+
 - include: ipa-pre-packstack.yml
 - include: packstack.yml
 - include: serviceauth.yml
