--- a/roles/packstack/tasks/serviceauth.yml
+++ b/roles/packstack/tasks/serviceauth.yml
@@ -1,7 +1,7 @@
 ---
-- name: python-keystoneclient-kerberos
-  yum: name=python-keystoneclient-kerberos
-       state=installed
+#- name: python-keystoneclient-kerberos
+#  yum: name=python-keystoneclient-kerberos
+#       state=installed
 
 - name: nova v3 authentication
   ini_file: section=keystone_authtoken
