--- a/roles/provision/tasks/main.yml
+++ b/roles/provision/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - include_tasks: create.yml
-  when: teardown is not defined
+  when: not teardown
 
 - include_tasks: teardown.yml
-  when: teardown is defined and teardown is true
+  when: teardown
