provision and teardown CFME server and ansible inventory file

--- a/roles/provision/tasks/teardown.yml
+++ b/roles/provision/tasks/teardown.yml
@@ -1,4 +1,21 @@
 ---
+
+- os_server:
+    cloud: "{{ cloudname }}"
+    state: absent
+    name: "cfme.{{ clustername }}"
+  with_items: "{{ cluster_hosts  }}"
+
+- os_volume:
+    cloud: "{{ cloudname }}"
+    display_name: cfme_volume
+    state: absent
+ 
+- os_volume:
+    cloud: "{{ cloudname }}"
+    display_name: cfme_db_volume
+    state: absent
+
 - os_server:
     cloud: "{{ cloudname }}"
     state: absent
