--- a/roles/provision/tasks/create.yml
+++ b/roles/provision/tasks/create.yml
@@ -7,9 +7,6 @@
     external: false
   register: osnetwork
 
-- debug:
-    msg: "{{ osnetwork.network.id }}"
-
 - os_subnet:
     cloud: "{{ cloudname }}"
     state: present
@@ -61,9 +58,65 @@
   with_items: "{{ cluster_hosts }}"
   register: osservers
 
-- debug:
-    var : osservers
+
+- name: create CFME volume
+  os_volume:
+    cloud: "{{ cloudname }}"
+    image: cfme-rhevm-5.9.0.15-1
+    size: 80
+    display_name: cfme_volume
+  register: cfme_volume
+
+- name: create CFME server
+  os_server:
+    cloud: "{{ cloudname }}"
+    state: present
+    name: "cfme.{{ clustername }}"
+    key_name: ayoung-pubkey
+    timeout: 200
+    flavor: 2
+    boot_volume: "{{ cfme_volume.volume.id }}"
+    security_groups:
+      - "{{ securitygroupname }}"
+    nics:
+      -  net-id:  "{{ osnetwork.network.id }}"
+         net-name: "{{ netname }}_network"
+    meta:
+      hostname: "{{ netname }}"
+  register: cfme_server
+
+- name: create CFME database volume
+  os_volume:
+    cloud: "{{ cloudname }}"
+    size: 80
+    display_name: cfme_db_volume
+  register: cfme_db_volume
+
+- name: attach db volume to CFME
+  os_server_volume:
+    cloud: "{{ cloudname }}"
+    state: present
+    server: "cfme.{{ clustername }}"
+    volume:  cfme_db_volume
+    device: /dev/vdb
+
+- file:
+    path: "{{ config_dir }}"
+    state: directory
+    mode: 0755
+
+- file:
+    path: "{{ config_dir }}/deployments"
+    state: directory
+    mode: 0755
+
+- file:
+    path: "{{ cluster_dir }}"
+    state: directory
+    mode: 0755
 
 - template:
     src: inventory.ini.j2
-    dest: /tmp/inventory.ini
+    dest: "{{ cluster_dir }}/inventory.ini"
+    force: yes
+    backup: yes
