--- a/roles/provision/tasks/create.yml
+++ b/roles/provision/tasks/create.yml
@@ -119,4 +119,36 @@
     src: inventory.ini.j2
     dest: "{{ cluster_dir }}/inventory.ini"
     force: yes
-    backup: yes
+    backup: no
+
+- file:
+    path: "{{ cluster_dir }}/ssh.config"
+    state: touch
+
+- lineinfile:
+    insertbefore: "BOF"
+    path: "{{ cluster_dir }}/ssh.config"
+    line: "{{ item }}"
+  with_items:
+    - "ControlMaster auto"
+    - "ControlPath /tmp/ssh_mux_%h_%p_%rA"
+
+- lineinfile:
+    path: "{{ cluster_dir }}/ssh.config"
+    line: Host "{{ item.server.name }}"
+  with_items: "{{ osservers.results }}"
+
+- lineinfile:
+    path: "{{ cluster_dir }}/ssh.config"
+    line:  "  Hostname {{ item.server.interface_ip }}"
+    insertafter: '{{ item.server.name }}'
+  with_items: "{{ osservers.results }}"
+
+- lineinfile:
+    path: "{{ cluster_dir }}/ssh.config"
+    line: Host  "cfme.{{ clustername }}"
+
+- lineinfile:
+    path: "{{ cluster_dir }}/ssh.config"
+    line:  "  Hostname {{ cfme_server.server.interface_ip  }}"
+    insertafter: "cfme.{{ clustername }}"
