--- a/roles/provision/vars/main.yml
+++ b/roles/provision/vars/main.yml
@@ -6,6 +6,7 @@ netname: "{{ username  }}-private-net"
 securitygroupname: ayoung-rdu-all-open
 config_dir: "{{ lookup('env', 'HOME') }}/rippowam"
 cluster_dir: "{{ config_dir }}/deployments/{{ clustername }}"
+ssh_config_path: "{{ ansible_env.HOME }}/.ssh/config"
 
 
 ipa_server_password: FreeIPA4All
@@ -15,8 +16,6 @@ ipa_forwarder: 192.168.52.3
 lab_nameserver1: 8.8.8.8
 lab_nameserver2: 8.8.8.7
 lab_nameserver3: 8.8.8.8
-
-
 
 
 cluster_hosts:
