--- a/roles/provision/tasks/create.yml
+++ b/roles/provision/tasks/create.yml
@@ -67,48 +67,6 @@
   with_items: "{{ cluster_hosts }}"
   register: osservers
 
-
-- name: create CFME volume
-  os_volume:
-    cloud: "{{ cloudname }}"
-    image: cfme-rhevm-5.9.0.15-1
-    size: 80
-    display_name: cfme_volume
-  register: cfme_volume
-
-- name: create CFME server
-  os_server:
-    cloud: "{{ cloudname }}"
-    state: present
-    name: "cfme.{{ clustername }}"
-    key_name: ayoung-pubkey
-    timeout: 200
-    flavor: 2
-    boot_volume: "{{ cfme_volume.volume.id }}"
-    security_groups:
-      - "{{ securitygroupname }}"
-    nics:
-      -  net-id:  "{{ osnetwork.network.id }}"
-         net-name: "{{ netname }}_network"
-    meta:
-      hostname: "cfme.{{ clustername }}"
-  register: cfme_server
-
-- name: create CFME database volume
-  os_volume:
-    cloud: "{{ cloudname }}"
-    size: 80
-    display_name: cfme_db_volume
-  register: cfme_db_volume
-
-- name: attach db volume to CFME
-  os_server_volume:
-    cloud: "{{ cloudname }}"
-    state: present
-    server: "cfme.{{ clustername }}"
-    volume:  cfme_db_volume
-    device: /dev/vdb
-
 - file:
     path: "{{ config_dir }}"
     state: directory
@@ -153,11 +111,8 @@
     insertafter: '{{ item.server.name }}'
   with_items: "{{ osservers.results }}"
 
-- lineinfile:
-    path: "{{ ssh_config_path }}"
-    line: Host "cfme.{{ clustername }}"
+- command: ssh-keygen -R  {{ item.server.interface_ip }}
+  with_items: "{{ osservers.results }}"
 
-- lineinfile:
-    path: "{{ ssh_config_path }}"
-    line:  "  Hostname {{ cfme_server.server.interface_ip  }}"
-    insertafter: "cfme.{{ clustername }}"
+- command: ssh-keygen -R {{ item.server.name }}
+  with_items: "{{ osservers.results }}"
