add firewall rule to allow udp traffic through for dns

--- a/playbooks/group_vars/all.yml
+++ b/playbooks/group_vars/all.yml
@@ -1,6 +1,7 @@
 ---
-username: ayoung
+username: "{{ ansible_env.USER }}"
 clustername: "{{username }}.{{ cloudname }}"
 ssh_config_path: "{{ ansible_env.HOME }}/.ssh/config"
 netname: "{{ username  }}-private-net"
-securitygroupname: ayoung-rdu-all-open
+securitygroupname: "{{username }}-rdu-all-open"
+
