--- a/roles/provision/tasks/create.yml
+++ b/roles/provision/tasks/create.yml
@@ -33,10 +33,13 @@
 - os_security_group_rule:
     cloud: "{{ cloudname }}"
     security_group: "{{ securitygroupname }}"
-    protocol: tcp
+    protocol: "{{ item }}"
     port_range_min: 1
     port_range_max: 65535
     remote_ip_prefix: 0.0.0.0/0
+  with_items:
+    - tcp
+    - udp
 
 - name: create servers
   os_server:
