--- a/roles/oce-master/tasks/main.yml
+++ b/roles/oce-master/tasks/main.yml
@@ -1,17 +1,17 @@
 ---
-#- name: disable all repos
-#  tags:
-#    - oce-master
-#  shell: subscription-manager repos --disable='*'
+- name: disable all repos
+  tags:
+    - oce-master
+  shell: subscription-manager repos --disable='*'
 
-#- name: enable only OpenShift Repos
-#  tags:
-#    - oce-master
-#  shell: subscription-manager repos
-#          --enable="rhel-7-server-rpms" \
-#          --enable="rhel-7-server-extras-rpms" \
-#          --enable="rhel-7-server-ose-3.7-rpms" \
-#          --enable="rhel-7-fast-datapath-rpms"
+- name: enable only OpenShift Repos
+  tags:
+    - oce-master
+  shell: subscription-manager repos
+          --enable="rhel-7-server-rpms" \
+          --enable="rhel-7-server-extras-rpms" \
+          --enable="rhel-7-server-ose-3.7-rpms" \
+          --enable="rhel-7-fast-datapath-rpms"
 
 
 - name: install the prereqs
