--- a/roles/provision/vars/main.yml
+++ b/roles/provision/vars/main.yml
@@ -13,10 +13,10 @@ lab_nameserver3: 8.8.8.8
 
 
 cluster_hosts:
-  - idm
-  - tower
-  - master
-  - node0
-  - node1
+  - {name: idm,    flavor:  m1.medium}
+  - {name: tower,  flavor:  m1.medium}
+  - {name: master, flavor:  m1.large}   #this needs to be xlarge IAW OSC docs
+  - {name: node0,  flavor:  m1.large}
+  - {name: node1,  flavor:  m1.large}
 
 
