--- a/roles/provision/tasks/teardown.yml
+++ b/roles/provision/tasks/teardown.yml
@@ -15,7 +15,7 @@
     line:  "  Hostname {{ item.ansible_facts.openstack_servers.0.interface_ip  }}"
     state: absent
   with_items: "{{ os_servers.results }}"
-
+  ignore_errors: yes
 
 - os_server_facts:
     cloud: "{{ cloudname }}"
