--- a/roles/provision/vars/main.yml
+++ b/roles/provision/vars/main.yml
@@ -14,9 +14,17 @@ lab_nameserver3: 8.8.8.8
 
 cluster_hosts:
   - {name: idm,    flavor:  m1.medium}
-  - {name: tower,  flavor:  m1.medium}
-  - {name: master, flavor:  m1.large}   #this needs to be xlarge IAW OSC docs
-  - {name: node0,  flavor:  m1.large}
-  - {name: node1,  flavor:  m1.large}
+  - {name: master0, flavor:  m1.medium}   #this needs to be xlarge IAW OSC docs
+  - {name: master1, flavor:  m1.medium}
+  - {name: master2, flavor:  m1.medium}
+  - {name: node0,  flavor:  m1.medium}
+  - {name: node1,  flavor:  m1.medium}
+  - {name: node2,  flavor:  m1.medium}
+
+
+cluster_volumes:
+  - {server_name: master0, volume_name: master0_var_volume, size: 30}
+  - {server_name: master1, volume_name: master1_var_volume, size: 30}
+  - {server_name: master2, volume_name: master2_var_volume, size: 30}
 
 
